--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 388,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 391,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 392,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        "Text(0.5, 1.0, 'Age Distribution')"
       ]
      },
-     "execution_count": 393,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 395,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
        "714"
       ]
      },
-     "execution_count": 396,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
        "Text(0.5, 1.0, 'Age Distribution')"
       ]
      },
-     "execution_count": 401,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
        "Text(0, 0.5, 'Count')"
       ]
      },
-     "execution_count": 403,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
        "male      468  109"
       ]
      },
-     "execution_count": 404,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +845,7 @@
        "Text(0, 0.5, 'Count')"
       ]
      },
-     "execution_count": 406,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
        "3         372  119"
       ]
      },
-     "execution_count": 407,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +996,7 @@
        "Name: Fare, dtype: float64"
       ]
      },
-     "execution_count": 408,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -1016,7 +1016,7 @@
        "(0, 537.94566)"
       ]
      },
-     "execution_count": 409,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1138,7 @@
        "3       491.0  13.675550  11.778142  0.0   7.75000   8.0500  15.5   69.5500"
       ]
      },
-     "execution_count": 410,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,16 +1149,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x12697c908>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x121dd70f0>"
       ]
      },
-     "execution_count": 411,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -1507,7 +1507,7 @@
        "822  38.000000      0      0   19972   0.0   NaN        S     1  "
       ]
      },
-     "execution_count": 412,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1545,7 +1545,7 @@
        "Name: Embarked, dtype: object"
       ]
      },
-     "execution_count": 413,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1556,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -1590,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1606,16 +1606,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 416,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x126a6b080>"
+       "<matplotlib.legend.Legend at 0x11fa6bda0>"
       ]
      },
-     "execution_count": 416,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1639,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 417,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -1703,7 +1703,7 @@
        "male      468  109"
       ]
      },
-     "execution_count": 417,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1734,20 +1734,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 418,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count                                                   891\n",
-       "unique                                                  891\n",
-       "top       Andersson, Mrs. Anders Johan (Alfrida Konstant...\n",
-       "freq                                                      1\n",
+       "count                 891\n",
+       "unique                891\n",
+       "top       Hart, Mr. Henry\n",
+       "freq                    1\n",
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 418,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1772,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -1789,7 +1789,7 @@
        "Name: SibSp, dtype: float64"
       ]
      },
-     "execution_count": 419,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1800,7 +1800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -1835,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -1875,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1892,7 +1892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -1927,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -1936,7 +1936,7 @@
        "Text(0, 0.5, 'Count')"
       ]
      },
-     "execution_count": 424,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1959,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -2029,7 +2029,7 @@
        "male       448   88"
       ]
      },
-     "execution_count": 425,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2060,7 +2060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -2077,7 +2077,7 @@
        "Name: Parch, dtype: float64"
       ]
      },
-     "execution_count": 426,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2088,7 +2088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -2131,7 +2131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -2151,7 +2151,7 @@
        "Name: Ticket, Length: 891, dtype: object"
       ]
      },
-     "execution_count": 428,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2162,7 +2162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -2175,7 +2175,7 @@
        "Name: Ticket, dtype: object"
       ]
      },
-     "execution_count": 429,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2209,20 +2209,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count     204\n",
-       "unique    147\n",
-       "top        G6\n",
-       "freq        4\n",
+       "count         204\n",
+       "unique        147\n",
+       "top       B96 B98\n",
+       "freq            4\n",
        "Name: Cabin, dtype: object"
       ]
      },
-     "execution_count": 430,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2233,7 +2233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -2268,27 +2268,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "G6             4\n",
        "B96 B98        4\n",
        "C23 C25 C27    4\n",
-       "D              3\n",
-       "F2             3\n",
+       "G6             4\n",
+       "C22 C26        3\n",
+       "E101           3\n",
        "              ..\n",
-       "B102           1\n",
-       "D19            1\n",
-       "C101           1\n",
-       "B42            1\n",
-       "E63            1\n",
+       "D46            1\n",
+       "B39            1\n",
+       "C54            1\n",
+       "C110           1\n",
+       "A6             1\n",
        "Name: Cabin, Length: 147, dtype: int64"
       ]
      },
-     "execution_count": 432,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2306,7 +2306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2315,7 +2315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -2333,7 +2333,7 @@
        "Name: Cabin, dtype: int64"
       ]
      },
-     "execution_count": 434,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2351,7 +2351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -2385,7 +2385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -2434,16 +2434,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x127696f98>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1223e4208>"
       ]
      },
-     "execution_count": 437,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     },
