--- a/notebooks/cleaning.ipynb
+++ b/notebooks/cleaning.ipynb
@@ -455,6 +455,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 10 columns):\n",
+      "Survived    891 non-null int64\n",
+      "Pclass      891 non-null int64\n",
+      "Name        891 non-null object\n",
+      "Sex         891 non-null object\n",
+      "Age         891 non-null float64\n",
+      "SibSp       891 non-null int64\n",
+      "Parch       891 non-null int64\n",
+      "Fare        891 non-null float64\n",
+      "Cabin       891 non-null object\n",
+      "Embarked    891 non-null object\n",
+      "dtypes: float64(2), int64(4), object(4)\n",
+      "memory usage: 69.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "titanic_train.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 155,
    "metadata": {},
    "outputs": [],
