--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
        "Text(0.5, 1.0, 'Age Distribution')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
        "Text(0, 0.5, 'Count')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
        "male      468  109"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
        "Text(0, 0.5, 'Count')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +759,7 @@
        "3         372  119"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,7 @@
        "Name: Fare, dtype: float64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
        "(0, 537.94566)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +951,7 @@
        "3       491.0  13.675550  11.778142  0.0   7.75000   8.0500  15.5   69.5500"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,16 +962,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11984dba8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1237407b8>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1304,7 +1304,7 @@
        "822  38.0      0      0   19972   0.0   NaN        S  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1329,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
        "Name: Embarked, dtype: object"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1394,16 +1394,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x119214860>"
+       "<matplotlib.legend.Legend at 0x1237ccb00>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1491,7 +1491,7 @@
        "male      468  109"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1522,20 +1522,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count                            891\n",
-       "unique                           891\n",
-       "top       Collander, Mr. Erik Gustaf\n",
-       "freq                               1\n",
+       "count                   891\n",
+       "unique                  891\n",
+       "top       Kink, Mr. Vincenz\n",
+       "freq                      1\n",
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1560,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1577,7 +1577,7 @@
        "Name: SibSp, dtype: float64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1588,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1623,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1668,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1685,7 +1685,7 @@
        "Name: Parch, dtype: float64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1696,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1741,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1761,7 +1761,7 @@
        "Name: Ticket, Length: 891, dtype: object"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1772,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1785,7 +1785,7 @@
        "Name: Ticket, dtype: object"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1819,7 +1819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1832,7 +1832,7 @@
        "Name: Cabin, dtype: object"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1843,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1878,27 +1878,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "C23 C25 C27    4\n",
-       "B96 B98        4\n",
        "G6             4\n",
+       "B96 B98        4\n",
+       "F33            3\n",
        "C22 C26        3\n",
-       "F2             3\n",
        "              ..\n",
-       "A10            1\n",
-       "B79            1\n",
-       "E77            1\n",
-       "D11            1\n",
-       "D37            1\n",
+       "D28            1\n",
+       "A7             1\n",
+       "C99            1\n",
+       "C32            1\n",
+       "D15            1\n",
        "Name: Cabin, Length: 147, dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1916,7 +1916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1927,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1944,7 +1944,7 @@
        "Name: Cabin, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1962,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1996,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2038,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2055,7 +2055,7 @@
        "Name: Deck, dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
