--- a/notebooks/feature_engineering.ipynb
+++ b/notebooks/feature_engineering.ipynb
@@ -14,7 +14,7 @@
     "My aim in this file is to create useful features for modelling and to put features in a form that a machine learning algorithm can accept. I will do this by:\n",
     "\n",
     "- Creating categorical columns from text data.\n",
-    "- Change representation of current features (continuous data to discrete, create dummy variables, etc.).\n",
+    "- Change representation of current features (nominal data to ordinal, create dummy variables, etc.).\n",
     "- Create interaction variables."
    ]
   },
@@ -27,17 +27,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "%matplotlib inline\n",
-    "\n",
     "from pathlib import Path\n",
     "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +123,7 @@
        "Name: Name, Length: 891, dtype: object"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -157,27 +153,27 @@
        "Master       40\n",
        "Dr            7\n",
        "Rev           6\n",
-       "Major         2\n",
        "Col           2\n",
+       "Major         2\n",
        "Mlle          2\n",
+       "Don           1\n",
+       "Jonkheer      1\n",
+       "Ms            1\n",
+       "Capt          1\n",
+       "Mme           1\n",
        "Countess      1\n",
        "Lady          1\n",
-       "Ms            1\n",
-       "Mme           1\n",
        "Sir           1\n",
-       "Jonkheer      1\n",
-       "Don           1\n",
-       "Capt          1\n",
        "Name: Name, dtype: int64"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Isolate all word characters before '.'\n",
+    "# Isolate all word characters directly before '.'\n",
     "training_df['Name'].apply(lambda x: re.compile('\\w+(?=\\.)').search(x).group()).value_counts()"
    ]
   },
@@ -190,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,8 +213,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's create an indicator variable for being a child."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_child_indicator(dataframe):\n",
+    "    dataframe['Child'] = dataframe['Age'].apply(lambda x: 1 if x < 13 else 0)\n",
+    "    return dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_df = get_child_indicator(training_df)\n",
+    "test_df = get_child_indicator(test_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create dummy variable for Sex column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def get_sex_dummies(dataframe):\n",
+    "#     \"\"\"Creates dummy variables for Sex column.\"\"\"\n",
+    "#     male_dummy_variables = pd.get_dummies(dataframe['Sex'], drop_first=True, prefix='Sex')\n",
+    "#     return pd.concat([dataframe.drop('Sex', axis=1), male_dummy_variables], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# training_df = get_sex_dummies(training_df)\n",
+    "# test_df = get_sex_dummies(test_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_df = pd.get_dummies(training_df, drop_first=True)\n",
+    "test_df = pd.get_dummies(test_df, drop_first=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all(training_df.drop('Survived', axis=1).columns == test_df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -227,20 +310,25 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 891 entries, 0 to 890\n",
-      "Data columns (total 11 columns):\n",
-      "Survived     891 non-null int64\n",
-      "Pclass       891 non-null int64\n",
-      "Sex          891 non-null object\n",
-      "Age          891 non-null float64\n",
-      "SibSp        891 non-null int64\n",
-      "Parch        891 non-null int64\n",
-      "Fare         891 non-null float64\n",
-      "Embarked     891 non-null object\n",
-      "Deck         891 non-null int32\n",
-      "Relatives    891 non-null int64\n",
-      "Title        891 non-null object\n",
-      "dtypes: float64(2), int32(1), int64(5), object(3)\n",
-      "memory usage: 73.2+ KB\n"
+      "Data columns (total 16 columns):\n",
+      "Survived       891 non-null int64\n",
+      "Pclass         891 non-null int64\n",
+      "Age            891 non-null float64\n",
+      "SibSp          891 non-null int64\n",
+      "Parch          891 non-null int64\n",
+      "Fare           891 non-null float64\n",
+      "Deck           891 non-null int32\n",
+      "Relatives      891 non-null int64\n",
+      "Child          891 non-null int64\n",
+      "Sex_male       891 non-null uint8\n",
+      "Embarked_Q     891 non-null uint8\n",
+      "Embarked_S     891 non-null uint8\n",
+      "Title_Miss     891 non-null uint8\n",
+      "Title_Mr       891 non-null uint8\n",
+      "Title_Mrs      891 non-null uint8\n",
+      "Title_Other    891 non-null uint8\n",
+      "dtypes: float64(2), int32(1), int64(6), uint8(7)\n",
+      "memory usage: 65.4 KB\n"
      ]
     }
    ],
@@ -249,11 +337,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "I will leave my feature engineering for now. I haven't made dummy variables from categorical data (other than Sex) because I want to test an association between the categories and the target using chi-squared tests before I convert to dummy variables. The features I created were:\n",
+    "\n",
+    "- Ordinal Deck number from Cabin column.\n",
+    "- Discrete Relatives column from combining Parch and SibSp.\n",
+    "- Nominal Title column extracted from Name column.\n",
+    "- Binary indicator for 'Child' (Age < 13).\n",
+    "\n",
+    "I had planned to create interaction variables but for now I won't do this but I will program my modelling to be able to use these terms if I do decide to create these variables."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "PROCESSED_PATH = Path('../data/processed')\n",
+    "training_df.to_csv(PROCESSED_PATH/'final_training.csv', index=False)\n",
+    "test_df.to_csv(PROCESSED_PATH/'final_test.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
