--- a/notebooks/feature_engineering.ipynb
+++ b/notebooks/feature_engineering.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "Name: Name, Length: 891, dtype: object"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -153,21 +153,21 @@
        "Master       40\n",
        "Dr            7\n",
        "Rev           6\n",
+       "Mlle          2\n",
        "Col           2\n",
        "Major         2\n",
-       "Mlle          2\n",
-       "Don           1\n",
-       "Jonkheer      1\n",
        "Ms            1\n",
-       "Capt          1\n",
-       "Mme           1\n",
-       "Countess      1\n",
        "Lady          1\n",
+       "Capt          1\n",
+       "Jonkheer      1\n",
+       "Countess      1\n",
+       "Mme           1\n",
        "Sir           1\n",
+       "Don           1\n",
        "Name: Name, dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,47 +241,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create dummy variable for Sex column."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def get_sex_dummies(dataframe):\n",
-    "#     \"\"\"Creates dummy variables for Sex column.\"\"\"\n",
-    "#     male_dummy_variables = pd.get_dummies(dataframe['Sex'], drop_first=True, prefix='Sex')\n",
-    "#     return pd.concat([dataframe.drop('Sex', axis=1), male_dummy_variables], axis=1)"
+    "training_w_dummies = pd.get_dummies(training_df, drop_first=True)\n",
+    "test_w_dummies = pd.get_dummies(test_df, drop_first=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# training_df = get_sex_dummies(training_df)\n",
-    "# test_df = get_sex_dummies(test_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "training_df = pd.get_dummies(training_df, drop_first=True)\n",
-    "test_df = pd.get_dummies(test_df, drop_first=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +261,7 @@
        "True"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -310,25 +281,21 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 891 entries, 0 to 890\n",
-      "Data columns (total 16 columns):\n",
-      "Survived       891 non-null int64\n",
-      "Pclass         891 non-null int64\n",
-      "Age            891 non-null float64\n",
-      "SibSp          891 non-null int64\n",
-      "Parch          891 non-null int64\n",
-      "Fare           891 non-null float64\n",
-      "Deck           891 non-null int32\n",
-      "Relatives      891 non-null int64\n",
-      "Child          891 non-null int64\n",
-      "Sex_male       891 non-null uint8\n",
-      "Embarked_Q     891 non-null uint8\n",
-      "Embarked_S     891 non-null uint8\n",
-      "Title_Miss     891 non-null uint8\n",
-      "Title_Mr       891 non-null uint8\n",
-      "Title_Mrs      891 non-null uint8\n",
-      "Title_Other    891 non-null uint8\n",
-      "dtypes: float64(2), int32(1), int64(6), uint8(7)\n",
-      "memory usage: 65.4 KB\n"
+      "Data columns (total 12 columns):\n",
+      "Survived     891 non-null int64\n",
+      "Pclass       891 non-null int64\n",
+      "Sex          891 non-null object\n",
+      "Age          891 non-null float64\n",
+      "SibSp        891 non-null int64\n",
+      "Parch        891 non-null int64\n",
+      "Fare         891 non-null float64\n",
+      "Embarked     891 non-null object\n",
+      "Deck         891 non-null int32\n",
+      "Relatives    891 non-null int64\n",
+      "Title        891 non-null object\n",
+      "Child        891 non-null int64\n",
+      "dtypes: float64(2), int32(1), int64(6), object(3)\n",
+      "memory usage: 80.2+ KB\n"
      ]
     }
    ],
@@ -342,7 +309,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "I will leave my feature engineering for now. I haven't made dummy variables from categorical data (other than Sex) because I want to test an association between the categories and the target using chi-squared tests before I convert to dummy variables. The features I created were:\n",
+    "I will leave my feature engineering for now. I have created two different types of dataframes, one with dummy variables from categorgorical data and one without, because I want to test an association between the categories and the target using chi-squared tests using the dataframe without dummy variables. The features I created were:\n",
     "\n",
     "- Ordinal Deck number from Cabin column.\n",
     "- Discrete Relatives column from combining Parch and SibSp.\n",
@@ -354,13 +321,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "PROCESSED_PATH = Path('../data/processed')\n",
     "training_df.to_csv(PROCESSED_PATH/'final_training.csv', index=False)\n",
-    "test_df.to_csv(PROCESSED_PATH/'final_test.csv', index=False)"
+    "test_df.to_csv(PROCESSED_PATH/'final_test.csv', index=False)\n",
+    "training_w_dummies.to_csv(PROCESSED_PATH/'final_training_w_dummies.csv', index=False)\n",
+    "test_w_dummies.to_csv(PROCESSED_PATH/'final_test_w_dummies.csv', index=False)"
    ]
   }
  ],
